# AtmosphereRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
asset/: aerial_lut.hlsl  dither.hlsl  final.hlsl  intersection.hlsl  medium.hlsl  mesh.hlsl  multiscatter.hlsl  postcolor.hlsl  shadow.hlsl  sky.hlsl  sky_lut.hlsl  sun.hlsl  transmittance.hlsl
ext/cy/: cyBVH.h  cyColor.h  cyHairFile.h  cyMatrix.h  cyQuat.h  cySpatial.h  cyString.h  cyTimer.h  cyTriMesh.h
src/: aerial_lut.cpp  aerial_lut.h  camera.cpp  camera.h  common.h  final.cpp  final.h  main.cpp  medium.cpp  medium.h  mesh.cpp  mesh.h  multiscatter.cpp  multiscatter.h  shadow.cpp  shadow.h  sky.cpp  sky.h  sky_lut.cpp  sky_lut.h  sun.cpp  sun.h  transmittance.cpp  transmittance.h
